# ai-text-server

./: .env.example  .env.ssl  .eslintrc.json  .gitignore  .prettierrc  LICENSE  README.md  inno-setup-config.iss  next.config.js  package.json  pnpm-lock.yaml  py-to-exe-config.debug.json  py-to-exe-config.dev.json  py-to-exe-config.prod.json  requirements.txt  tailwind.config.js
api/: index.py
app/: layout.tsx  page.tsx
assets/: api-docs.md  build-steps.md  bundling-packaging.md  deploy-release.md  development.md  getting-started.md  how-to-use.md
assets/documentation/: app-architecture.excalidraw  workflows.excalidraw
backends/: api_server.py  main.py
backends/core/: classes.py  common.py
backends/embedding/: chunking.py  embedding.py  evaluation.py  file_loaders.py  file_parsers.py  query.py  storage.py
backends/embeddings/: chunking.py  file_loaders.py  file_parsers.py  main.py  query.py  route.py  storage.py  text_splitters.py
backends/inference/: agent.py  classes.py  infer_text_api.py  redirects.py  route.py  text_llama_cpp_python.py  text_llama_index.py  text_llm.py  text_routes.py
backends/routes/: __init__.py  api.py  embeddings.py
backends/server/: classes.py  common.py
backends/services/: route.py
backends/settings/: route.py
backends/storage/: classes.py  route.py
backends/templates/: index.html
backends/ui/: api_ui.py  connection-page.css  connection-page.html  connection-page.js  global.css  global.js  index.css  index.html  main.css  main.html  main.js  script.js  settings.css  settings.html  settings.js  style.css  view.py
examples/: Local_LLM_with_llama_index.ipynb
examples/data/: META-Q1-2024-Balance-Sheet.csv  device-list.md  (+5 more)
main/: electron.js  index.js  preload.js
models/: models.ts
renderer/: babel.config.js  global.d.ts  tsconfig.json
shared/: constants.json  text_model_configs.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/model/: directory.rs  downloader.rs  integrity.rs  mod.rs
src-tauri/src/utils/: mod.rs
training/: app-about.md  app-tutorial.md
(+46 files in other folders)
